--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@ title: Contrat Agile
     </div>
     <div class="modal-body">
         <p>
-            <a href="contrat/Contrat_Agile_V1.1.docx"><img class="thumbnail" width="140px"
-                                                                   src="images/formats/word.png"
+            <a href="contrats/Contrat_Agile_V1.1.docx"><img class="thumbnail" width="140px"
+                                                                   src="images/word.png"
                                                                    alt="DOC"/></a>&nbsp;
-            <a href="contrat/Contrat_Agile_V1.1.pdf"><img class="thumbnail" width="140px"
-                                                                  src="images/formats/pdf.png"
+            <a href="contrats/Contrat_Agile_V1.1.pdf"><img class="thumbnail" width="140px"
+                                                                  src="images/pdf.png"
                                                                   alt="PDF"/></a>&nbsp;
-            <a href="contrat/Contrat_Agile_V1.1.rtf"><img class="thumbnail" height="140px"
-                                                                  src="images/formats/rtf.png"
+            <a href="contrats/Contrat_Agile_V1.1.rtf"><img class="thumbnail" height="140px"
+                                                                  src="images/rtf.png"
                                                                   alt="RTF"/></a>
 
         </p>
