Bug fixing : Dead links

--- a/annexe-finnanciere.html
+++ b/annexe-finnanciere.html
@@ -22,7 +22,7 @@ title: Annexe financière
         <p>Le paragraphe 11 du contrat agile introduit le concept de facturation à l'itération (au Sprint). L'annexe
             financière reprend ces modalités et donne le prix d'un Sprint en fonction de la taille de l'équipe. Dans
             cette annexe, on définit également le montant de la pénalité forfaitaire qui peut être imputée au
-            prestataire en cas de manquement à ses engagements (cf <a href="/application/pqs ">PQS</a>)</p>
+            prestataire en cas de manquement à ses engagements (cf <a href="pqs.html ">PQS</a>)</p>
 
         <p>Dans cette page, nous vous proposons de rentrer dans le détail de la partie financière du contrat (Paragraphe
             11 + Annexe financière) au travers d'un exemple concret. Nous allons notamment répondre aux questions
