--- a/structure.html
+++ b/structure.html
@@ -114,7 +114,7 @@ title: Structure
     </div>
     <div class="row">
         <div class="span3 offset10">
-            <a class="btn" href="/application/pqs">En savoir plus...</a>
+            <a class="btn" href="pqs.html">En savoir plus...</a>
         </div>
     </div>
 </div>
@@ -141,7 +141,7 @@ title: Structure
 
     <div class="row">
         <div class="span3 offset10">
-            <a class="btn" href="/application/annexefinanciere">En savoir plus...</a>
+            <a class="btn" href="annexe-financiere.html">En savoir plus...</a>
         </div>
     </div>
 </div>
@@ -168,13 +168,13 @@ title: Structure
     <div class="modal-body">
         <p>
             <a href="/public/contrat/Contrat_Agile_V1.1.docx"><img class="thumbnail" width="140px"
-                                                                   src="/public/images/formats/word.png"
+                                                                   src="/public/images/word.png"
                                                                    alt="DOC"/></a>&nbsp;
             <a href="/public/contrat/Contrat_Agile_V1.1.pdf"><img class="thumbnail" width="140px"
-                                                                  src="/public/images/formats/pdf.png"
+                                                                  src="/public/images/pdf.png"
                                                                   alt="PDF"/></a>&nbsp;
             <a href="/public/contrat/Contrat_Agile_V1.1.rtf"><img class="thumbnail" height="140px"
-                                                                  src="/public/images/formats/rtf.png"
+                                                                  src="/public/images/rtf.png"
                                                                   alt="RTF"/></a>
 
         </p>
