Bug fixing : Dead links

--- a/structure.html
+++ b/structure.html
@@ -168,13 +168,13 @@ title: Structure
     <div class="modal-body">
         <p>
             <a href="/public/contrat/Contrat_Agile_V1.1.docx"><img class="thumbnail" width="140px"
-                                                                   src="/public/images/word.png"
+                                                                   src="images/word.png"
                                                                    alt="DOC"/></a>&nbsp;
             <a href="/public/contrat/Contrat_Agile_V1.1.pdf"><img class="thumbnail" width="140px"
-                                                                  src="/public/images/pdf.png"
+                                                                  src="images/pdf.png"
                                                                   alt="PDF"/></a>&nbsp;
             <a href="/public/contrat/Contrat_Agile_V1.1.rtf"><img class="thumbnail" height="140px"
-                                                                  src="/public/images/rtf.png"
+                                                                  src="images/rtf.png"
                                                                   alt="RTF"/></a>
 
         </p>
