--- a/credits.html
+++ b/credits.html
@@ -28,7 +28,7 @@ title: Crédits
     <div class="span3" style="width:185px;">
         <p>
         <address>
-            <strong>Xebia</strong><br/>
+            <strong>Publicis Sapient Engineering</strong><br/>
             Luc Legardeur<br/>
             Hugo Geissmann<br/>
         </address>
