changement xebia en publicis et add logo

--- a/apropos.html
+++ b/apropos.html
@@ -24,7 +24,7 @@ title: À propos
         <div class="row">
             <div class="span7" style="text-align:center">
                 <img class="thumbnail"
-                     src="images/logo-Xebia2.gif"
+                     src="images/logo-publicissapientengineering.png"
                      width="180px"
                      alt=""/>
             </div>
@@ -42,27 +42,13 @@ title: À propos
         <div class="row">
             <div class="span7 apropos">
                 <div class="hero-unit">
-                    <p> Xebia est un groupe d'experts, exclusivement dédié aux technologies Java / JEE en
-                        environnement
-                        agile.</p>
+                    <p> Publicis Sapient Engineering (anciennement Xebia) est la communauté Tech de Publicis Sapient, la branche de transformation numérique du groupe Publicis.</p>
 
-                    <p>Nous aidons nos clients à concevoir, développer et gérer des infrastructures, des
-                        applications et
-                        des architectures basées sur Java en leur garantissant que l’intégralité des Règles de l’Art
-                        de
-                        notre profession est respectée.
+                    <p>Notre mission : construire avec nos clients des solutions logicielles de très haute qualité. Précurseurs des méthodes agiles en France et défenseurs du Software Craftsmanship, la passion pour le travail bien fait est partie intégrante de notre ADN.</p>
 
-                    <p>
+                    <p>Strategy, Product Management, Experience, AI & Data et Engineering : nous joignons nos forces pour créer les meilleurs produits et bâtir un lieu où la collaboration entre les métiers de la stratégie, de la créativité et du développement agile « done right » est possible.</p>
 
-                    <p> Chez Xebia, nous appelons cela le Software Craftmanship, l’artisanat logiciel, l’art de
-                        faire
-                        bien
-                        les choses, en un mot : Software Development Done Right. </p>
-
-                    <p>Nous mettons à la disposition de nos clients une organisation de développement de qualité
-                        équivalente au département R&D d’un éditeur de logiciel. </p>
-
-                    <a class="btn" href="http://www.xebia.fr/">En savoir plus...</a>
+                    <a class="btn" href="https://www.publicissapient.fr/services/technology-engineering">En savoir plus...</a>
 
                 </div>
             </div>
